# scrapy

./: README.md  pyproject.toml
wiki-scrape/: 20th_century_wars.ipynb  20th_century_wars.py  aquaman_villains.py  usa_presidents.py
