[project]
name = "SternSoupScraper"
version = "0.1.0"
description = "Trial for Web Scraping"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "lxml>=5.4.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "ruff>=0.11.10",
    "yapf>=0.43.0",
]

[tool.yapf]
based_on_style = "google"
column_limit = 100

[tool.ruff]
line-length = 100
fix = true
unsafe-fixes = true
extend-select = ["I"]  # organize imports

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
  "F",
  "E",
  "I",
  "N",
  "UP",
  "PT",
  "Q",
  "RET",
  "SIM",
  "ARG",
  "ERA",
  "PL",
  "NPY",
  "PERF",
  "FURB",
]
